--- a/WebUI/src/assets/i18n/ja.json
+++ b/WebUI/src/assets/i18n/ja.json
@@ -253,6 +253,11 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "チェックポイントモデル",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "フレームレート",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "総フレーム数",
+  "SETTINGS_AUDIO": "オーディオ",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "無音検出",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "無音の長さ",
+  "SETTINGS_DEVELOPER": "開発者",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "起動時に開発者コンソールを開く",
 
   "COM_LOAD_VIDEO": "動画を読み込む",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "HDデフォルトインペイント/アウトペイントモデル",
