--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -253,6 +253,11 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "체크포인트 모델",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "프레임 레이트",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "총 프레임",
+  "SETTINGS_AUDIO": "오디오",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "무음 감지",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "무음 지속 시간",
+  "SETTINGS_DEVELOPER": "개발자",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "시작 시 개발자 콘솔 열기",
 
   "COM_LOAD_VIDEO": "비디오 로드",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "HD 기본 Inpaint/Outpaint 모델",
