--- a/WebUI/src/assets/i18n/th.json
+++ b/WebUI/src/assets/i18n/th.json
@@ -252,6 +252,11 @@
   "DEVICE": "อุปกรณ์",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "โมเดลเช็คพอยต์",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "อัตราเฟรม",
+  "SETTINGS_AUDIO": "เสียง",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "การตรวจจับความเงียบ",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "ระยะเวลาความเงียบ",
+  "SETTINGS_DEVELOPER": "นักพัฒนา",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "เปิดคอนโซลนักพัฒนาเมื่อเริ่มต้น",
   "COM_LOAD_VIDEO": "โหลดวิดีโอ",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "โมเดล HD Inpaint/Outpaint เริ่มต้น",
   "BACKEND_VERSION_DESCRIPTION_COMFYUI": "ป้อนแฮชคอมมิต git หรือแท็กเวอร์ชัน (เช่น v1.2.3 หรือ abc1234)",
