--- a/WebUI/src/assets/i18n/tr.json
+++ b/WebUI/src/assets/i18n/tr.json
@@ -252,6 +252,11 @@
   "DEVICE": "Cihaz",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Kontrol Noktası Modeli",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Kare Hızı",
+  "SETTINGS_AUDIO": "Ses",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "Sessizlik Algılama",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "Sessizlik Süresi",
+  "SETTINGS_DEVELOPER": "Geliştirici",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "Başlangıçta Geliştirici Konsolunu Aç",
   "COM_LOAD_VIDEO": "Video Yükle",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Varsayılan HD Inpaint/Outpaint Modeli",
   "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Git commit hash'i veya sürüm etiketi girin (örn. v1.2.3 veya abc1234)",
