--- a/WebUI/src/assets/i18n/vi.json
+++ b/WebUI/src/assets/i18n/vi.json
@@ -252,6 +252,11 @@
   "DEVICE": "Thiết bị",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Mô hình checkpoint",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Tốc độ khung hình",
+  "SETTINGS_AUDIO": "Âm thanh",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "Phát hiện im lặng",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "Thời gian im lặng",
+  "SETTINGS_DEVELOPER": "Nhà phát triển",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "Mở Console nhà phát triển khi khởi động",
   "COM_LOAD_VIDEO": "Tải video",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Mô hình HD Inpaint/Outpaint mặc định",
   "BACKEND_VERSION_DESCRIPTION_COMFYUI": "Nhập hash commit git hoặc thẻ phiên bản (ví dụ: v1.2.3 hoặc abc1234)",
