--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -252,6 +252,11 @@
   "DEVICE": "设备",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "检查点模型",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "帧率",
+  "SETTINGS_AUDIO": "音频",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "静音检测",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "静音持续时间",
+  "SETTINGS_DEVELOPER": "开发者",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "启动时打开开发者控制台",
   "COM_LOAD_VIDEO": "加载视频",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "默认 HD Inpaint/Outpaint 模型",
   "BACKEND_VERSION_DESCRIPTION_COMFYUI": "输入 git 提交哈希或版本标签（例如 v1.2.3 或 abc1234）",
