--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -252,6 +252,11 @@
   "DEVICE": "設備",
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "檢查點模型",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "幀率",
+  "SETTINGS_AUDIO": "音訊",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "靜音偵測",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "靜音持續時間",
+  "SETTINGS_DEVELOPER": "開發者",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "啟動時開啟開發者主控台",
   "COM_LOAD_VIDEO": "載入影片",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "預設 HD Inpaint/Outpaint 模型",
   "BACKEND_VERSION_DESCRIPTION_COMFYUI": "輸入 git 提交雜湊或版本標籤（例如 v1.2.3 或 abc1234）",
