--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -253,6 +253,11 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Model Checkpoint",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Frame Rate",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Total Frame",
+  "SETTINGS_AUDIO": "Audio",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "Deteksi Keheningan",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "Durasi Keheningan",
+  "SETTINGS_DEVELOPER": "Pengembang",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "Buka Konsol Pengembang saat Startup",
 
   "COM_LOAD_VIDEO": "Muat Video",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Model Inpaint/OutPaint Default HD",
