--- a/WebUI/src/assets/i18n/pl.json
+++ b/WebUI/src/assets/i18n/pl.json
@@ -253,6 +253,11 @@
   "SETTINGS_IMAGE_COMFY_CHECKPOINT_MODEL": "Model punktu kontrolnego",
   "SETTINGS_IMAGE_COMFY_FRAME_RATE": "Liczba klatek",
   "SETTINGS_IMAGE_COMFY_TOTAL_FRAMES": "Całkowita liczba klatek",
+  "SETTINGS_AUDIO": "Dźwięk",
+  "SETTINGS_AUDIO_SILENCE_DETECTION": "Wykrywanie ciszy",
+  "SETTINGS_AUDIO_SILENCE_DURATION": "Czas trwania ciszy",
+  "SETTINGS_DEVELOPER": "Deweloper",
+  "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "Otwórz konsolę dewelopera przy starcie",
 
   "COM_LOAD_VIDEO": "Wczytaj wideo",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Domyślny model HD Inpaint/Outpaint",
