--- a/WebUI/src/assets/i18n/id.json
+++ b/WebUI/src/assets/i18n/id.json
@@ -258,6 +258,8 @@
   "SETTINGS_AUDIO_SILENCE_DURATION": "Durasi Keheningan",
   "SETTINGS_DEVELOPER": "Pengembang",
   "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "Buka Konsol Pengembang saat Startup",
+  "SETTINGS_DEVELOPER_KEEP_MODELS_LOADED": "Tetap Muat Model",
+  "SETTINGS_DEVELOPER_KEEP_MODELS_LOADED_INFO": "Jika diaktifkan, model chat dan pembuatan gambar tetap dimuat di memori secara bersamaan. Membutuhkan lebih banyak VRAM tetapi menghindari pemuatan ulang model saat beralih antara chat dan pembuatan gambar.",
 
   "COM_LOAD_VIDEO": "Muat Video",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Model Inpaint/OutPaint Default HD",
