--- a/WebUI/src/assets/i18n/pl.json
+++ b/WebUI/src/assets/i18n/pl.json
@@ -258,6 +258,8 @@
   "SETTINGS_AUDIO_SILENCE_DURATION": "Czas trwania ciszy",
   "SETTINGS_DEVELOPER": "Deweloper",
   "SETTINGS_DEVELOPER_OPEN_DEV_CONSOLE_ON_STARTUP": "Otwórz konsolę dewelopera przy starcie",
+  "SETTINGS_DEVELOPER_KEEP_MODELS_LOADED": "Utrzymuj modele załadowane",
+  "SETTINGS_DEVELOPER_KEEP_MODELS_LOADED_INFO": "Po włączeniu modele czatu i generowania obrazów pozostają jednocześnie załadowane w pamięci. Wymaga więcej VRAM, ale pozwala uniknąć ponownego ładowania modeli przy przełączaniu między czatem a generowaniem obrazów.",
 
   "COM_LOAD_VIDEO": "Wczytaj wideo",
   "SETTINGS_MODEL_SD_HD_INPAINT_MODEL": "Domyślny model HD Inpaint/Outpaint",
